--- a/hero.css
+++ b/hero.css
@@ -71,6 +71,10 @@
   text-decoration: underline;
 }
 
+.about-me:hover span{
+  margin-right: 10px;
+}
+
 @media(max-width: 764px){
   .hero-container{
     flex-direction: column;
