--- a/template/about.html
+++ b/template/about.html
@@ -3,10 +3,10 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rakesh Soni | Home</title>
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/About-Us/about.css" />
-    <link rel="stylesheet" href="./styles/About-Us/achieve.css" />
-    <link rel="stylesheet" href="./styles/About-Us/experience.css" />
+    <link rel="stylesheet" href="../static/styles/style.css" />
+    <link rel="stylesheet" href="../static/styles/About-Us/about.css" />
+    <link rel="stylesheet" href="../static/styles/About-Us/achieve.css" />
+    <link rel="stylesheet" href="../static/styles/About-Us/experience.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -16,13 +16,13 @@
           <span>Rakesh Soni</span>
         </div>
         <div class="links">
-          <div><a class="nav-link" href="/">Home</a></div>
+          <div><a class="nav-link" href="../index.html">Home</a></div>
           <div><a class="nav-link" href="./skills.html">Skills</a></div>
           <div><a class="nav-link" href="./projects.html">Projects</a></div>
           <div><a class="nav-button" href="#">Contact Me</a></div>
         </div>
-        <div class="hams"><img src="./icons/hams.svg" /></div>
-        <div class="close"><img src="./icons/close.svg" /></div>
+        <div class="hams"><img src="../static/icons/hams.svg" /></div>
+        <div class="close"><img src="../static/icons/close.svg" /></div>
       </nav>
     </header>
 
@@ -30,7 +30,7 @@
       <!-- About Us Section -->
       <section class="about-me">
         <div class="section-header">
-          <div><img src="./icons/about-me.svg" alt="Information"></div>
+          <div><img src="../static/icons/about-me.svg" alt="Information"></div>
           <h2>About Me</h2>
         </div>
         <div class="about-info-wrapper">
@@ -53,25 +53,25 @@
               <div class="hobby-wrapper">
                 <div class="hobby">
                   <div>
-                    <img src="./icons/hobby-check.svg" alt="check-box" />
+                    <img src="../static/icons/hobby-check.svg" alt="check-box" />
                   </div>
                   <div>Playing Games</div>
                 </div>
                 <div class="hobby">
                   <div>
-                    <img src="./icons/hobby-check.svg" alt="check-box" />
+                    <img src="../static/icons/hobby-check.svg" alt="check-box" />
                   </div>
                   <div>Watching Movies/Series</div>
                 </div>
                 <div class="hobby">
                   <div>
-                    <img src="./icons/hobby-check.svg" alt="check-box" />
+                    <img src="../static/icons/hobby-check.svg" alt="check-box" />
                   </div>
                   <div>Exploring Technlogies</div>
                 </div>
                 <div class="hobby">
                   <div>
-                    <img src="./icons/hobby-check.svg" alt="check-box" />
+                    <img src="../static/icons/hobby-check.svg" alt="check-box" />
                   </div>
                   <div>Solving Algorithmic Problems</div>
                 </div>
@@ -82,7 +82,7 @@
           <div class="education">
             <div class="edu-card">
               <div class="smart-icon">
-                <img src="./icons/smart-icon.svg" alt="smart-icon" />
+                <img src="../static/icons/smart-icon.svg" alt="smart-icon" />
               </div>
               <div class="edu-info">
                 <div class="specialization-info">
@@ -97,7 +97,7 @@
                 </div>
                 <div class="spec-resulting">
                   <div class="edu-comp-date">
-                    <div><img src="./icons/calender.svg" alt="calender" /></div>
+                    <div><img src="../static/icons/calender.svg" alt="calender" /></div>
                     <div>2014-15</div>
                   </div>
                   <div class="percentile">88.67%</div>
@@ -106,7 +106,7 @@
             </div>
             <div class="edu-card">
               <div class="smart-icon">
-                <img src="./icons/smart-icon.svg" alt="smart-icon" />
+                <img src="../static/icons/smart-icon.svg" alt="smart-icon" />
               </div>
               <div class="edu-info">
                 <div class="specialization-info">
@@ -121,7 +121,7 @@
                 </div>
                 <div class="spec-resulting">
                   <div class="edu-comp-date">
-                    <div><img src="./icons/calender.svg" alt="calender" /></div>
+                    <div><img src="../static/icons/calender.svg" alt="calender" /></div>
                     <div>2016-17</div>
                   </div>
                   <div class="percentile">90.80%</div>
@@ -130,7 +130,7 @@
             </div>
             <div class="edu-card">
               <div class="smart-icon">
-                <img src="./icons/smart-icon.svg" alt="smart-icon" />
+                <img src="../static/icons/smart-icon.svg" alt="smart-icon" />
               </div>
               <div class="edu-info">
                 <div class="specialization-info">
@@ -145,7 +145,7 @@
                 </div>
                 <div class="spec-resulting">
                   <div class="edu-comp-date">
-                    <div><img src="./icons/calender.svg" alt="calender" /></div>
+                    <div><img src="../static/icons/calender.svg" alt="calender" /></div>
                     <div>2019-23</div>
                   </div>
                   <div class="percentile">7.39</div>
@@ -159,45 +159,45 @@
       <!-- Achievements -->
       <section class="achievements">
         <div class="section-header">
-          <div><img src="./icons/medal.svg" alt="Medal"></div>
+          <div><img src="../static/icons/medal.svg" alt="Medal"></div>
           <h2>Achievements</h2>
         </div>
         <div class="achieve-wrapper">
           <div class="achieve-card">
             <div class="smart-icon">
-              <img src="./icons/smart-icon.svg" alt="smart-icon" />
+              <img src="../static/icons/smart-icon.svg" alt="smart-icon" />
             </div>
             <div class="achieve-info">
               <div class="achv-name">Got HP Laptop, by securing First Position in 8th class</div>
               <div class="achv-place">Govt. Sen. Sec. School, Rana Pali</div>
               <div class="edu-comp-date">
-                <div><img src="./icons/calender.svg" alt="calender" /></div>
+                <div><img src="../static/icons/calender.svg" alt="calender" /></div>
                 <div>2012-13</div>
               </div>
             </div>
           </div>
           <div class="achieve-card">
             <div class="smart-icon">
-              <img src="./icons/smart-icon.svg" alt="smart-icon" />
+              <img src="../static/icons/smart-icon.svg" alt="smart-icon" />
             </div>
             <div class="achieve-info">
               <div class="achv-name">Got ₹ 5000 for Representing the School at Science Fair</div>
               <div class="achv-place">Govt. Sen. Sec. School, Rana Pali</div>
               <div class="edu-comp-date">
-                <div><img src="./icons/calender.svg" alt="calender" /></div>
+                <div><img src="../static/icons/calender.svg" alt="calender" /></div>
                 <div>2013-14</div>
               </div>
             </div>
           </div>
           <div class="achieve-card">
             <div class="smart-icon">
-              <img src="./icons/smart-icon.svg" alt="smart-icon" />
+              <img src="../static/icons/smart-icon.svg" alt="smart-icon" />
             </div>
             <div class="achieve-info">
               <div class="achv-name">Secured 6500 Rank in JEE Mains</div>
               <div class="achv-place">Self Study</div>
               <div class="edu-comp-date">
-                <div><img src="./icons/calender.svg" alt="calender" /></div>
+                <div><img src="../static/icons/calender.svg" alt="calender" /></div>
                 <div>2018-19</div>
               </div>
             </div>
@@ -208,19 +208,19 @@
       <!-- Work Experience -->
       <section class="work-experience">
         <div class="section-header">
-          <div><img src="./icons/work.svg" alt="Medal"></div>
+          <div><img src="../static/icons/work.svg" alt="Medal"></div>
           <h2>Work Experience</h2>
         </div>
         <div class="achieve-wrapper">
           <div class="achieve-card">
             <div class="smart-icon">
-              <img src="./icons/smart-icon.svg" alt="smart-icon" />
+              <img src="../static/icons/smart-icon.svg" alt="smart-icon" />
             </div>
             <div class="achieve-info">
               <div class="achv-name">API Development Using FastAPI-Python</div>
               <div class="achv-place">Decimal Point Analytics - Intern</div>
               <div class="exp-date">
-                <div><img src="./icons/calender.svg" alt="calender" /></div>
+                <div><img src="../static/icons/calender.svg" alt="calender" /></div>
                 <div class="date-exp-show"><span class="start-date">June 2022</span> - <span class="end-date">Present</span></div>
               </div>
             </div>
@@ -234,6 +234,6 @@
       <div class="foot-content">Copyright @Rakesh Soni</div>
     </footer>
 
-    <script src="./scripts/script.js"></script>
+    <script src="../static/scripts/script.js"></script>
   </body>
 </html>
