--- a/template/projects.html
+++ b/template/projects.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rakesh Soni | Home</title>
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/projects.css">
+    <link rel="stylesheet" href="../static/styles/style.css" />
+    <link rel="stylesheet" href="../static/styles/projects.css">
   </head>
   <body>
     <!-- Navbar -->
@@ -19,8 +19,8 @@
           <div><a class="nav-link link-active" href="#">Projects</a></div>
           <div><a class="nav-button" href="#">Contact Me</a></div>
         </div>
-        <div class="hams"><img src="./icons/hams.svg" /></div>
-        <div class="close"><img src="./icons/close.svg" /></div>
+        <div class="hams"><img src="../static/icons/hams.svg" /></div>
+        <div class="close"><img src="../static/icons/close.svg" /></div>
       </nav>
     </header>
 
@@ -32,7 +32,7 @@
           <a class="project-card" href="#">
             <div class="project-cat-img">
               <div class="project-cat">E-commerce</div>
-              <div><img src="./imgs/project-1.jpg" alt="E-commerce"></div>
+              <div><img src="../static/imgs/project-1.jpg" alt="E-commerce"></div>
             </div>
             <div class="project-output">Web Development</div>
             <div class="prj-desc">The e-commerce website for user to take products and cart the items to purchase and make payment.</div>
@@ -52,7 +52,7 @@
           <a class="project-card" href="#">
             <div class="project-cat-img">
               <div class="project-cat">Logistics</div>
-              <div><img src="./imgs/project-2.jpg" alt="Logistics"></div>
+              <div><img src="../static/imgs/project-2.jpg" alt="Logistics"></div>
             </div>
             <div class="project-output">UI/UX Design</div>
             <div class="prj-desc">With a community to deliver the product choosen and prefered within the required time is the deal.</div>
@@ -72,7 +72,7 @@
           <a class="project-card" href="#">
             <div class="project-cat-img">
               <div class="project-cat">Chessboard</div>
-              <div><img src="./imgs/project-3.jpg" alt="Chessboard"></div>
+              <div><img src="../static/imgs/project-3.jpg" alt="Chessboard"></div>
             </div>
             <div class="project-output">N Queens Problem</div>
             <div class="prj-desc">Backtracking algorithm for arranging the queens on chessboard so that no queens attack each other.</div>
@@ -92,7 +92,7 @@
           <a class="project-card" href="#">
             <div class="project-cat-img">
               <div class="project-cat">Quantum_Mech</div>
-              <div><img src="./imgs/project-4.jpg" alt="Quantum_Mech"></div>
+              <div><img src="../static/imgs/project-4.jpg" alt="Quantum_Mech"></div>
             </div>
             <div class="project-output">Research Paper</div>
             <div class="prj-desc">How quantum can be a futuristic approach to travel with the spped of life and reach to moon soon.</div>
@@ -112,7 +112,7 @@
           <a class="project-card" href="#">
             <div class="project-cat-img">
               <div class="project-cat">Metacommerce</div>
-              <div><img src="./imgs/project-5.jpg" alt="Metacommerce"></div>
+              <div><img src="../static/imgs/project-5.jpg" alt="Metacommerce"></div>
             </div>
             <div class="project-output">Metaverse</div>
             <div class="prj-desc">A physical Handset system with VR facility to visit shopping mall and purchase items by sitting at home.</div>
@@ -132,7 +132,7 @@
           <a class="project-card" href="#">
             <div class="project-cat-img">
               <div class="project-cat">E-commerce</div>
-              <div><img src="./imgs/project-6.jpg" alt="E-commerce"></div>
+              <div><img src="../static/imgs/project-6.jpg" alt="E-commerce"></div>
             </div>
             <div class="project-output">Web Development</div>
             <div class="prj-desc">The e-commerce website for user to take products and cart the items to purchase and make payment.</div>
@@ -158,6 +158,6 @@
       <div class="foot-content">Copyright @Rakesh Soni</div>
     </footer>
 
-    <script src="./scripts/script.js"></script>
+    <script src="../static/scripts/script.js"></script>
   </body>
 </html>
