--- a/template/skills.html
+++ b/template/skills.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rakesh Soni | Home</title>
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/skills.css">
+    <link rel="stylesheet" href="../static/styles/style.css" />
+    <link rel="stylesheet" href="../static/styles/skills.css">
   </head>
   <body>
     <!-- Navbar -->
@@ -14,13 +14,13 @@
           <span>Rakesh Soni</span>
         </div>
         <div class="links">
-          <div><a class="nav-link" href="/">Home</a></div>
+          <div><a class="nav-link" href="../index.html">Home</a></div>
           <div><a class="nav-link link-active" href="#">Skills</a></div>
           <div><a class="nav-link" href="./projects.html">Projects</a></div>
           <div><a class="nav-button" href="#">Contact Me</a></div>
         </div>
-        <div class="hams"><img src="./icons/hams.svg" /></div>
-        <div class="close"><img src="./icons/close.svg" /></div>
+        <div class="hams"><img src="../static/icons/hams.svg" /></div>
+        <div class="close"><img src="../static/icons/close.svg" /></div>
       </nav>
     </header>
 
@@ -37,7 +37,7 @@
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="./icons/javascript.svg" alt="JavaScript"></div>
+                <div><img src="../static/icons/javascript.svg" alt="JavaScript"></div>
                 <p>Javascript</p>
               </div>
             </div>
@@ -50,7 +50,7 @@
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="./icons/python.svg" alt="Python"></div>
+                <div><img src="../static/icons/python.svg" alt="Python"></div>
                 <p>Python</p>
               </div>
             </div>
@@ -63,7 +63,7 @@
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="./icons/React-js.svg" alt="React"></div>
+                <div><img src="../static/icons/React-js.svg" alt="React"></div>
                 <p>React</p>
               </div>
             </div>
@@ -76,7 +76,7 @@
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="./icons/html.svg" alt="HTML"></div>
+                <div><img src="../static/icons/html.svg" alt="HTML"></div>
                 <p>HTML</p>
               </div>
             </div>
@@ -89,7 +89,7 @@
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="./icons/mysql.svg" alt="MySQL"></div>
+                <div><img src="../static/icons/mysql.svg" alt="MySQL"></div>
                 <p>MySQL</p>
               </div>
             </div>
@@ -102,7 +102,7 @@
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="./icons/nodejs.svg" alt="NodeJS"></div>
+                <div><img src="../static/icons/nodejs.svg" alt="NodeJS"></div>
                 <p>NodeJS</p>
               </div>
             </div>
@@ -115,7 +115,7 @@
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="./icons/cpp.svg" alt="CPP"></div>
+                <div><img src="../static/icons/cpp.svg" alt="CPP"></div>
                 <p>C++</p>
               </div>
             </div>
@@ -128,7 +128,7 @@
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="./icons/UX.svg" alt="UI/UX"></div>
+                <div><img src="../static/icons/UX.svg" alt="UI/UX"></div>
                 <p>UI/UX</p>
               </div>
             </div>
@@ -141,7 +141,7 @@
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="./icons/css.svg" alt="CSS"></div>
+                <div><img src="../static/icons/css.svg" alt="CSS"></div>
                 <p>CSS</p>
               </div>
             </div>
@@ -154,7 +154,7 @@
                 <circle cx="70" cy="70" r="70"></circle>
               </svg>
               <div class="number">
-                <div><img src="./icons/mongodb.svg" alt="Mongo DB"></div>
+                <div><img src="../static/icons/mongodb.svg" alt="Mongo DB"></div>
                 <p>Mongo DB</p>
               </div>
             </div>
@@ -168,6 +168,6 @@
       <div class="foot-content">Copyright @Rakesh Soni</div>
     </footer>
 
-    <script src="./scripts/script.js"></script>
+    <script src="../static/scripts/script.js"></script>
   </body>
 </html>
