Actual Data importing

--- a/template/projects.html
+++ b/template/projects.html
@@ -29,116 +29,36 @@
       <section class="project-section">
         <h2>My Projects</h2>
         <div class="projects-wrapper">
-          <a class="project-card" href="#">
+          <a class="project-card" href="https://www.figma.com/proto/6sQm9W9ZTCg1Ul1NnZihCV/Bazarpur-Services?page-id=0%3A1&node-id=4%3A68&starting-point-node-id=4%3A68&scaling=scale-down">
             <div class="project-cat-img">
               <div class="project-cat">E-commerce</div>
-              <div><img src="../static/imgs/project-1.jpg" alt="E-commerce"></div>
+              <div><img src="../static/imgs/bazarpur.jpg" alt="E-commerce"></div>
             </div>
             <div class="project-output">Web Development</div>
-            <div class="prj-desc">The e-commerce website for user to take products and cart the items to purchase and make payment.</div>
+            <div class="prj-desc">A hyper-local e-commerce business model based website to represent local market virtually.</div>
             <div class="start-date">
               <div>Start Date</div>
-              <div>21 Jun, 2022</div>
+              <div>13 Mar, 2021</div>
             </div>
             <div class="prj-status">
               <div>Status</div>
               <div class="done">Completed</div>
-            </div>
-            <div class="project-tech">
-              <div>Technology</div>
-              <div>MERN</div>
-            </div>
-          </a>
-          <a class="project-card" href="#">
-            <div class="project-cat-img">
-              <div class="project-cat">Logistics</div>
-              <div><img src="../static/imgs/project-2.jpg" alt="Logistics"></div>
-            </div>
-            <div class="project-output">UI/UX Design</div>
-            <div class="prj-desc">With a community to deliver the product choosen and prefered within the required time is the deal.</div>
-            <div class="start-date">
-              <div>Start Date</div>
-              <div>18 Mar, 2022</div>
-            </div>
-            <div class="prj-status">
-              <div>Status</div>
-              <div class="run">Running</div>
             </div>
             <div class="project-tech">
               <div>Technology</div>
               <div>Design</div>
             </div>
           </a>
-          <a class="project-card" href="#">
+          <a class="project-card" href="https://github.com/Rakeshsoni7296/Waymore.git">
             <div class="project-cat-img">
-              <div class="project-cat">Chessboard</div>
-              <div><img src="../static/imgs/project-3.jpg" alt="Chessboard"></div>
+              <div class="project-cat">Blog</div>
+              <div><img src="../static/imgs/waymore.jpg" alt="Blog"></div>
             </div>
-            <div class="project-output">N Queens Problem</div>
-            <div class="prj-desc">Backtracking algorithm for arranging the queens on chessboard so that no queens attack each other.</div>
+            <div class="project-output">UI/UX Design</div>
+            <div class="prj-desc">A Beautiful website for content creators and daily readers to deliver thoughts among each other.</div>
             <div class="start-date">
               <div>Start Date</div>
-              <div>09 Feb, 2022</div>
-            </div>
-            <div class="prj-status">
-              <div>Status</div>
-              <div class="done">Completed</div>
-            </div>
-            <div class="project-tech">
-              <div>Technology</div>
-              <div>Backtracking</div>
-            </div>
-          </a>
-          <a class="project-card" href="#">
-            <div class="project-cat-img">
-              <div class="project-cat">Quantum_Mech</div>
-              <div><img src="../static/imgs/project-4.jpg" alt="Quantum_Mech"></div>
-            </div>
-            <div class="project-output">Research Paper</div>
-            <div class="prj-desc">How quantum can be a futuristic approach to travel with the spped of life and reach to moon soon.</div>
-            <div class="start-date">
-              <div>Start Date</div>
-              <div>12 Dec, 2021</div>
-            </div>
-            <div class="prj-status">
-              <div>Status</div>
-              <div class="run">Running</div>
-            </div>
-            <div class="project-tech">
-              <div>Technology</div>
-              <div>Physics</div>
-            </div>
-          </a>
-          <a class="project-card" href="#">
-            <div class="project-cat-img">
-              <div class="project-cat">Metacommerce</div>
-              <div><img src="../static/imgs/project-5.jpg" alt="Metacommerce"></div>
-            </div>
-            <div class="project-output">Metaverse</div>
-            <div class="prj-desc">A physical Handset system with VR facility to visit shopping mall and purchase items by sitting at home.</div>
-            <div class="start-date">
-              <div>Start Date</div>
-              <div>21 Jun, 2022</div>
-            </div>
-            <div class="prj-status">
-              <div>Status</div>
-              <div class="done">Completed</div>
-            </div>
-            <div class="project-tech">
-              <div>Technology</div>
-              <div>AR/VR</div>
-            </div>
-          </a>
-          <a class="project-card" href="#">
-            <div class="project-cat-img">
-              <div class="project-cat">E-commerce</div>
-              <div><img src="../static/imgs/project-6.jpg" alt="E-commerce"></div>
-            </div>
-            <div class="project-output">Web Development</div>
-            <div class="prj-desc">The e-commerce website for user to take products and cart the items to purchase and make payment.</div>
-            <div class="start-date">
-              <div>Start Date</div>
-              <div>10 May, 2021</div>
+              <div>09 Dec, 2021</div>
             </div>
             <div class="prj-status">
               <div>Status</div>
@@ -147,6 +67,106 @@
             <div class="project-tech">
               <div>Technology</div>
               <div>MERN</div>
+            </div>
+          </a>
+          <a class="project-card" href="https://www.figma.com/proto/8SLmhQhKEmUG1gEKBptE3u/GyanDaan-Project?page-id=0%3A1&node-id=21%3A111&starting-point-node-id=21%3A111&scaling=scale-down">
+            <div class="project-cat-img">
+              <div class="project-cat">Education</div>
+              <div><img src="../static/imgs/career-path.jpg" alt="Education"></div>
+            </div>
+            <div class="project-output">UI/UX Design</div>
+            <div class="prj-desc">A platform to deliver knowledge volunteerly to the deserving students who can't afford paid courses.</div>
+            <div class="start-date">
+              <div>Start Date</div>
+              <div>13 Feb, 2022</div>
+            </div>
+            <div class="prj-status">
+              <div>Status</div>
+              <div class="done">Completed</div>
+            </div>
+            <div class="project-tech">
+              <div>Technology</div>
+              <div>Design</div>
+            </div>
+          </a>
+          <a class="project-card" href="https://www.figma.com/proto/OV8wBlCiFR8bnFy8RgiZnw/Untitled?page-id=0%3A1&node-id=17%3A0">
+            <div class="project-cat-img">
+              <div class="project-cat">Logistics</div>
+              <div><img src="../static/imgs/uma.jpg" alt="Logistics"></div>
+            </div>
+            <div class="project-output">UI/UX Design</div>
+            <div class="prj-desc">A platform to deliver goods between cities with facility of tracking status and logistics management.</div>
+            <div class="start-date">
+              <div>Start Date</div>
+              <div>27 Jun, 2021</div>
+            </div>
+            <div class="prj-status">
+              <div>Status</div>
+              <div class="done">completed</div>
+            </div>
+            <div class="project-tech">
+              <div>Technology</div>
+              <div>Design</div>
+            </div>
+          </a>
+          <a class="project-card" href="https://mapty.netlify.app/">
+            <div class="project-cat-img">
+              <div class="project-cat">Health</div>
+              <div><img src="../static/imgs/mapty.jpg" alt="Health"></div>
+            </div>
+            <div class="project-output">Web Development</div>
+            <div class="prj-desc">A map view to store daily cycling or running activity to check daily calories burning process.</div>
+            <div class="start-date">
+              <div>Start Date</div>
+              <div>09 Aug, 2021</div>
+            </div>
+            <div class="prj-status">
+              <div>Status</div>
+              <div class="done">Completed</div>
+            </div>
+            <div class="project-tech">
+              <div>Technology</div>
+              <div>Javascript</div>
+            </div>
+          </a>
+          <a class="project-card" href="https://www.figma.com/proto/DGMstxtkzYjIHdSkg4EmDB/Way-More?page-id=0%3A1&node-id=5%3A272&starting-point-node-id=5%3A272">
+            <div class="project-cat-img">
+              <div class="project-cat">Blog</div>
+              <div><img src="../static/imgs/waymore-old.JPG" alt="Blog"></div>
+            </div>
+            <div class="project-output">UI/UX Design</div>
+            <div class="prj-desc">A platform to engage people to learn, read and write for having an excitement in their busy schedule.</div>
+            <div class="start-date">
+              <div>Start Date</div>
+              <div>17 Sep, 2021</div>
+            </div>
+            <div class="prj-status">
+              <div>Status</div>
+              <div class="done">Completed</div>
+            </div>
+            <div class="project-tech">
+              <div>Technology</div>
+              <div>Design</div>
+            </div>
+          </a>
+          <a class="project-card" href="https://www.figma.com/proto/s9wCJ3PQuSqW1s5ArACwgs/Untitled?page-id=0%3A1&node-id=1%3A2">
+            <div class="project-cat-img">
+              <div class="project-cat">Food</div>
+              <div><img src="../static/imgs/knife-fork.jpg" alt="Food"></div>
+            </div>
+            <div class="project-output">UI/UX Design</div>
+            <div class="prj-desc">Landing page for a demo Restaurant website Knife and fork offering meal with a nice user interface.</div>
+            <div class="start-date">
+              <div>Start Date</div>
+              <div>30 Jul, 2021</div>
+            </div>
+            <div class="prj-status">
+              <div>Status</div>
+              <div class="done">Completed</div>
+            </div>
+            <div class="project-tech">
+              <div>Technology</div>
+              <div>Design</div>
             </div>
           </a>
         </div>
