--- a/template/projects.html
+++ b/template/projects.html
@@ -29,7 +29,7 @@
       <section class="project-section">
         <h2>My Projects</h2>
         <div class="projects-wrapper">
-          <a class="project-card" href="https://www.figma.com/proto/6sQm9W9ZTCg1Ul1NnZihCV/Bazarpur-Services?page-id=0%3A1&node-id=4%3A68&starting-point-node-id=4%3A68&scaling=scale-down">
+          <a class="project-card" target="_blank" href="https://www.figma.com/proto/6sQm9W9ZTCg1Ul1NnZihCV/Bazarpur-Services?page-id=0%3A1&node-id=4%3A68&starting-point-node-id=4%3A68&scaling=scale-down">
             <div class="project-cat-img">
               <div class="project-cat">E-commerce</div>
               <div><img src="../static/imgs/bazarpur.jpg" alt="E-commerce"></div>
@@ -49,7 +49,7 @@
               <div>Design</div>
             </div>
           </a>
-          <a class="project-card" href="https://github.com/Rakeshsoni7296/Waymore.git">
+          <a class="project-card" target="_blank" href="https://github.com/Rakeshsoni7296/Waymore.git">
             <div class="project-cat-img">
               <div class="project-cat">Blog</div>
               <div><img src="../static/imgs/waymore.jpg" alt="Blog"></div>
@@ -69,7 +69,7 @@
               <div>MERN</div>
             </div>
           </a>
-          <a class="project-card" href="https://www.figma.com/proto/8SLmhQhKEmUG1gEKBptE3u/GyanDaan-Project?page-id=0%3A1&node-id=21%3A111&starting-point-node-id=21%3A111&scaling=scale-down">
+          <a class="project-card" target="_blank" href="https://www.figma.com/proto/8SLmhQhKEmUG1gEKBptE3u/GyanDaan-Project?page-id=0%3A1&node-id=21%3A111&starting-point-node-id=21%3A111&scaling=scale-down">
             <div class="project-cat-img">
               <div class="project-cat">Education</div>
               <div><img src="../static/imgs/career-path.jpg" alt="Education"></div>
@@ -89,7 +89,7 @@
               <div>Design</div>
             </div>
           </a>
-          <a class="project-card" href="https://www.figma.com/proto/OV8wBlCiFR8bnFy8RgiZnw/Untitled?page-id=0%3A1&node-id=17%3A0">
+          <a class="project-card" target="_blank" href="https://www.figma.com/proto/OV8wBlCiFR8bnFy8RgiZnw/Untitled?page-id=0%3A1&node-id=17%3A0">
             <div class="project-cat-img">
               <div class="project-cat">Logistics</div>
               <div><img src="../static/imgs/uma.jpg" alt="Logistics"></div>
@@ -109,7 +109,7 @@
               <div>Design</div>
             </div>
           </a>
-          <a class="project-card" href="https://mapty.netlify.app/">
+          <a class="project-card" target="_blank" href="https://mapty.netlify.app/">
             <div class="project-cat-img">
               <div class="project-cat">Health</div>
               <div><img src="../static/imgs/mapty.jpg" alt="Health"></div>
@@ -129,7 +129,7 @@
               <div>Javascript</div>
             </div>
           </a>
-          <a class="project-card" href="https://www.figma.com/proto/DGMstxtkzYjIHdSkg4EmDB/Way-More?page-id=0%3A1&node-id=5%3A272&starting-point-node-id=5%3A272">
+          <a class="project-card" target="_blank" href="https://www.figma.com/proto/DGMstxtkzYjIHdSkg4EmDB/Way-More?page-id=0%3A1&node-id=5%3A272&starting-point-node-id=5%3A272">
             <div class="project-cat-img">
               <div class="project-cat">Blog</div>
               <div><img src="../static/imgs/waymore2.jpg" alt="Blog"></div>
@@ -149,7 +149,7 @@
               <div>Design</div>
             </div>
           </a>
-          <a class="project-card" href="https://www.figma.com/proto/s9wCJ3PQuSqW1s5ArACwgs/Untitled?page-id=0%3A1&node-id=1%3A2">
+          <a class="project-card" target="_blank" href="https://www.figma.com/proto/s9wCJ3PQuSqW1s5ArACwgs/Untitled?page-id=0%3A1&node-id=1%3A2">
             <div class="project-cat-img">
               <div class="project-cat">Food</div>
               <div><img src="../static/imgs/knife-fork.jpg" alt="Food"></div>
