--- a/template/projects.html
+++ b/template/projects.html
@@ -17,7 +17,7 @@
           <div><a class="nav-link" href="/">Home</a></div>
           <div><a class="nav-link" href="./skills.html">Skills</a></div>
           <div><a class="nav-link link-active" href="#">Projects</a></div>
-          <div><a class="nav-button" href="#">Contact Me</a></div>
+          <div><a class="nav-button" href="404">Contact Me</a></div>
         </div>
         <div class="hams"><img src="../static/icons/hams.svg" /></div>
         <div class="close"><img src="../static/icons/close.svg" /></div>
