--- a/template/skills.html
+++ b/template/skills.html
@@ -17,7 +17,7 @@
           <div><a class="nav-link" href="../index.html">Home</a></div>
           <div><a class="nav-link link-active" href="#">Skills</a></div>
           <div><a class="nav-link" href="./projects.html">Projects</a></div>
-          <div><a class="nav-button" href="#">Contact Me</a></div>
+          <div><a class="nav-button" href="404">Contact Me</a></div>
         </div>
         <div class="hams"><img src="../static/icons/hams.svg" /></div>
         <div class="close"><img src="../static/icons/close.svg" /></div>
